# mini-rest-api

./: .gitignore  Cargo.toml
src/: config.rs  db.rs  error.rs  logger.rs  main.rs
src/api/: middleware.rs  server.rs
src/cmd/: api.rs
src/modules/notes/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
