[package]
name = "mini-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "util"] }

tower-request-id = "0.3"
